--- a/frontend/src/Component.module.css
+++ b/frontend/src/Component.module.css
@@ -36,8 +36,50 @@ border-radius: .5rem;
 }
 
 .btn:hover{
-background:var(--black);
-}
+  background:var(--black);
+  }
+
+.btn1{
+  display: inline-block;
+  background:var(--green);
+  color:#fff;
+  padding:.8rem 3rem;
+  text-align: center;
+  cursor: pointer;
+  border-radius: .5rem;
+  }
+
+.btn1:hover{
+  background:var(--black);
+  }
+
+.btn2{
+  display: inline-block;
+  background: rgb(235, 96, 96);
+  color:#fff;
+  padding:.8rem 3rem;
+  text-align: center;
+  cursor: pointer;
+  border-radius: .5rem;
+  }
+
+.btn2:hover{
+  background: red;
+  }
+
+.btn3{
+  display: inline-block;
+  background: rgb(84, 204, 84);
+  color:#fff;
+  padding:.8rem 3rem;
+  text-align: center;
+  cursor: pointer;
+  border-radius: .5rem;
+  }
+
+.btn3:hover{
+  background: green;
+  }
 
 .heading{
 text-align: center;
@@ -113,3 +155,19 @@ z-index: 10000;
 .icons a:hover{
     color:var(--green);
   }
+
+.home{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.image{
+  flex:1 1 40rem;
+  padding-top: 5rem;
+}
+
+.content{
+  flex:1 1 40rem;
+}
