--- a/frontend/src/Component.module.css
+++ b/frontend/src/Component.module.css
@@ -36,6 +36,7 @@ border-radius: .5rem;
 }
 
 .btn:hover{
+  color:#fff;
   background:var(--black);
   }
 
@@ -50,6 +51,7 @@ border-radius: .5rem;
   }
 
 .btn1:hover{
+  color:#fff;
   background:var(--black);
   }
 
