--- a/frontend/src/Component.module.css
+++ b/frontend/src/Component.module.css
@@ -40,6 +40,21 @@ border-radius: .5rem;
   background:var(--black);
   }
 
+.btn0{
+  display: inline-block;
+  background:var(--green);
+  color:#fff;
+  padding:.8rem 3rem;
+  text-align: center;
+  cursor: pointer;
+  border-radius: .5rem;
+  }
+  
+.btn0:hover{
+  color:#fff;
+  background:var(--black);
+  }
+
 .btn1{
   display: inline-block;
   background:var(--green);
